--- a/index.html
+++ b/index.html
@@ -5,8 +5,45 @@
         <title></title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     </head>
-    <body>
 
+    <body>
+        <!--Create Navbar at the top of the page-->
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand">Simon Ziccardi</a>
+            <form class="form-inline">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </nav>
+
+        <!--Create some background image that is somewhat muted-->
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-8">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h1>About Me</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <img src="https://via.placeholder.com/150"/>
+                        </div>
+                        <div class="col-xs-4">
+                            <p>This is the filler text for the about me section. It will be filled in at a later date.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <p>This is the rest of the about me section. It should be in it's own column.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
