Changes to index.html and contact.html.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="col-8">
                     <div class="row">
-                        <div class="col-xs-12">
+                        <div class="col">
                             <h1>About Me</h1>
                         </div>
                     </div>
@@ -31,8 +31,9 @@
                         <div class="col-xs-4">
                             <img src="https://via.placeholder.com/150"/>
                         </div>
-                        <div class="col-xs-4">
-                            <p>This is the filler text for the about me section. It will be filled in at a later date.</p>
+
+                        <div class="col">
+                            <p>This is the filler text for the about me section. It will be filled in at a later date. Lets continue to add text to see what happens.</p>
                         </div>
                     </div>
                     <div class="row">
