--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,50 @@
     <head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     </head>
+
     <body>
+        <!--Create Navbar at the top of the page-->
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand">Simon Ziccardi</a>
+            <form class="form-inline">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </nav>
+
+        <!--Add a background image something muted-->
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>Contact</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                <!--Create a form to be contacted by-->
+                    <form>
+                        <div class="form-group">
+                            <label for="InputName">Name</label>
+                            <input type="name" class="form-control" id="InputName1" aria-describedby="nameHelp" placeholder="Name">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="InputEmail">Email</label>
+                            <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="InputMessage">Message</label>
+                            <textarea type="message" class="form-control" id="InputMessage1" aria-describedby="messageHelp" placeholder="Message" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </body>
