--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,34 @@
     <head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     </head>
+
     <body>
+        <!--Include Nav bar-->
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand">Simon Ziccardi</a>
+            <form class="form-inline">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </nav>
+
+        <div class="container">
+            <!--Include same type of header used on other pages of the site-->
+            <div class="row">
+                <div class="col">
+                    <h1>Portfolio</h1>
+                </div>
+            </div>
+
+            <!--Use image thumbnails to show portfolio of work-->
+            <div class="row">
+                <div class="col">
+                    <img src="https://via.placeholder.com/350" alt="Placeholder Image" class="img-thumbnail"/>
+                </div>
+            </div>
+
+        </div>
+
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
