--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css"/>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1 shrink-to-fit=no"
@@ -31,12 +32,12 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html"
-              >About Me</a
-            >
+            <a class="nav-link" href="index.html">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="portfolio.html"
+              >Portfolio<span class="sr-only">(current)</span></a
+            >
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -46,56 +47,56 @@
     </nav>
 
     <!--Add a background image something muted-->
-
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h1>Contact</h1>
+    <div class="bg">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1>Contact</h1>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <!--Create a form to be contacted by-->
-          <form>
-            <div class="form-group">
-              <label for="InputName">Name</label>
-              <input
-                type="name"
-                class="form-control"
-                id="InputName1"
-                aria-describedby="nameHelp"
-                placeholder="Name"
-              />
-            </div>
+        <div class="row">
+          <div class="col">
+            <!--Create a form to be contacted by-->
+            <form>
+              <div class="form-group">
+                <label for="InputName">Name</label>
+                <input
+                  type="name"
+                  class="form-control"
+                  id="InputName1"
+                  aria-describedby="nameHelp"
+                  placeholder="Name"
+                />
+              </div>
 
-            <div class="form-group">
-              <label for="InputEmail">Email</label>
-              <input
-                type="email"
-                class="form-control"
-                id="InputEmail1"
-                aria-describedby="emailHelp"
-                placeholder="Email"
-              />
-            </div>
+              <div class="form-group">
+                <label for="InputEmail">Email</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="InputEmail1"
+                  aria-describedby="emailHelp"
+                  placeholder="Email"
+                />
+              </div>
 
-            <div class="form-group">
-              <label for="InputMessage">Message</label>
-              <textarea
-                type="message"
-                class="form-control"
-                id="InputMessage1"
-                aria-describedby="messageHelp"
-                placeholder="Message"
-                rows="3"
-              ></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+              <div class="form-group">
+                <label for="InputMessage">Message</label>
+                <textarea
+                  type="message"
+                  class="form-control"
+                  id="InputMessage1"
+                  aria-describedby="messageHelp"
+                  placeholder="Message"
+                  rows="3"
+                ></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
