--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css"/>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1 shrink-to-fit=no"
@@ -15,6 +16,7 @@
   </head>
 
   <body>
+
     <!--Create Navbar at the top of the page-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="index.html">Simon Ziccardi</a>
@@ -33,11 +35,11 @@
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="index.html"
-              >About Me</a
+              >About Me<span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -45,37 +47,82 @@
         </ul>
       </div>
     </nav>
-
-    <!--Create some background image that is somewhat muted-->
-
-    <div class="container">
-      <div class="row">
-        <div class="col-8">
-          <div class="row">
-            <div class="col">
-              <h1>About Me</h1>
+    <!--Create backgound Image for page-->
+    <div class="bg">
+      <!--Create container to house remaining content-->
+      <div class="container">
+        <div class="row">
+          <div class="col col-sm-7">
+            <div class="card">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <h1>About Me</h1>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <img src="https://via.placeholder.com/100"
+                    alt="Place Holder Image"/>
+                    <p class="text-wrap">
+                      My name is Simon Ziccardi. I am currently located in Columbus,
+                      Ohio. I am currently open to contract work as well as permanent
+                      positions. In addition to web development work, I have a degree
+                      in Chemical Engineering from The Ohio State University.
+                    </p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <h2>Contact Information</h2>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <ul>
+                      <li>Email: sziccardifullstack@gmail.com
+                      </li>
+                      <li>LinkdIn: enter url here</li>
+                      <li>GitHub: <a href="https://github.com/sziccardi1998">https://github.com/sziccardi1998</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-4">
-              <img src="https://via.placeholder.com/150" />
+            <!--<div class="row">
+              <div class="col">
+                <h1>About Me</h1>
+              </div>
             </div>
-
-            <div class="col">
-              <p>
-                This is the filler text for the about me section. It will be
-                filled in at a later date. Lets continue to add text to see what
-                happens.
-              </p>
+            <div class="row">
+              <div class="col-xs-4">
+                <p>
+                  <img
+                    src="https://via.placeholder.com/100"
+                    alt="Placeholder Images"
+                    class="mr-auto"
+                  />
+                  My name is Simon Ziccardi. I am currently located in Columbus,
+                  Ohio. I am currently open to contract work as well as permanent
+                  positions. In addition to web development work, I have a degree
+                  in Chemical Engineering from The Ohio State University.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <p>
-                This is the rest of the about me section. It should be in it's
-                own column.
-              </p>
+            <div class="row">
+              <div class="col">
+                <h2>
+                  Contact Information
+                </h2>
+              </div>
             </div>
+            <div class="row">
+              <div class="col">
+                <ul>
+                  <li>Email: sziccardifullstack@gmail.com</li>
+                </ul>
+              </div>
+            </div> -->
           </div>
         </div>
       </div>
