--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css"/>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1 shrink-to-fit=no"
@@ -31,12 +32,12 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html"
-              >About Me</a
-            >
+            <a class="nav-link" href="index.html">About Me</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="portfolio.html"
+              >Portfolio<span class="sr-only">(current)</span></a
+            >
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -45,26 +46,66 @@
       </div>
     </nav>
 
-    <div class="container">
-      <!--Include same type of header used on other pages of the site-->
-      <div class="row">
-        <div class="col">
-          <h1>Portfolio</h1>
+    <div class="bg">
+      <div class="container">
+        <!--Include same type of header used on other pages of the site-->
+        <div class="row">
+          <div class="col">
+            <h1>Portfolio</h1>
+          </div>
         </div>
-      </div>
 
-      <!--Use image thumbnails to show portfolio of work-->
-      <div class="row">
-        <div class="col">
-          <img
-            src="https://via.placeholder.com/350"
-            alt="Placeholder Image"
-            class="img-thumbnail"
-          />
+        <!--Use image thumbnails to show portfolio of work-->
+        <div class="row">
+          <div class="col-lg-6">
+            <img
+              src="https://via.placeholder.com/350"
+              alt="Placeholder Image"
+              class="img-thumbnail img-fluid"
+            />
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="https://via.placeholder.com/350"
+              alt="Placeholder Image"
+              class="img-thumbnail img-fluid"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <img
+              src="https://via.placeholder.com/350"
+              alt="Placeholder Image"
+              class="img-thumbnail img-fluid"
+            />
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="https://via.placeholder.com/350"
+              alt="Placeholder Image"
+              class="img-thumbnail img-fluid"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <img
+              src="https://via.placeholder.com/350"
+              alt="Placeholder Image"
+              class="img-thumbnail img-fluid"
+            />
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="https://via.placeholder.com/350"
+              alt="Placeholder Image"
+              class="img-thumbnail img-fluid"
+            />
+          </div>
         </div>
       </div>
     </div>
-
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
