Moved content in each page into a card.

--- a/contact.html
+++ b/contact.html
@@ -51,48 +51,56 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h1>Contact</h1>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <!--Create a form to be contacted by-->
-            <form>
-              <div class="form-group">
-                <label for="InputName">Name</label>
-                <input
-                  type="name"
-                  class="form-control"
-                  id="InputName1"
-                  aria-describedby="nameHelp"
-                  placeholder="Name"
-                />
+            <div class="card">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <h1>Contact</h1>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <!--Create a form to be contacted by-->
+                    <form>
+                      <div class="form-group">
+                        <label for="InputName">Name</label>
+                        <input
+                          type="name"
+                          class="form-control"
+                          id="InputName1"
+                          aria-describedby="nameHelp"
+                          placeholder="Name"
+                        />
+                      </div>
+        
+                      <div class="form-group">
+                        <label for="InputEmail">Email</label>
+                        <input
+                          type="email"
+                          class="form-control"
+                          id="InputEmail1"
+                          aria-describedby="emailHelp"
+                          placeholder="Email"
+                        />
+                      </div>
+        
+                      <div class="form-group">
+                        <label for="InputMessage">Message</label>
+                        <textarea
+                          type="message"
+                          class="form-control"
+                          id="InputMessage1"
+                          aria-describedby="messageHelp"
+                          placeholder="Message"
+                          rows="3"
+                        ></textarea>
+                      </div>
+                      <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                  </div>
+                </div>
               </div>
-
-              <div class="form-group">
-                <label for="InputEmail">Email</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="InputEmail1"
-                  aria-describedby="emailHelp"
-                  placeholder="Email"
-                />
-              </div>
-
-              <div class="form-group">
-                <label for="InputMessage">Message</label>
-                <textarea
-                  type="message"
-                  class="form-control"
-                  id="InputMessage1"
-                  aria-describedby="messageHelp"
-                  placeholder="Message"
-                  rows="3"
-                ></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+            </div>
           </div>
         </div>
       </div>
