--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1 shrink-to-fit=no"
@@ -16,7 +16,6 @@
   </head>
 
   <body>
-
     <!--Create Navbar at the top of the page-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="index.html">Simon Ziccardi</a>
@@ -62,13 +61,16 @@
                 </div>
                 <div class="row">
                   <div class="col">
-                    <img src="https://via.placeholder.com/100"
-                    alt="Place Holder Image"/>
+                    <img
+                      src="https://via.placeholder.com/100"
+                      alt="Place Holder Image"
+                    />
                     <p class="text-wrap">
-                      My name is Simon Ziccardi. I am currently located in Columbus,
-                      Ohio. I am currently open to contract work as well as permanent
-                      positions. In addition to web development work, I have a degree
-                      in Chemical Engineering from The Ohio State University.
+                      My name is Simon Ziccardi. I am currently located in
+                      Columbus, Ohio. I am currently open to contract work as
+                      well as permanent positions. In addition to web
+                      development work, I have a degree in Chemical Engineering
+                      from The Ohio State University.
                     </p>
                   </div>
                 </div>
@@ -80,10 +82,14 @@
                 <div class="row">
                   <div class="col">
                     <ul>
-                      <li>Email: sziccardifullstack@gmail.com
+                      <li>Email: sziccardifullstack@gmail.com</li>
+                      <li>LinkedIn: enter url here</li>
+                      <li>
+                        GitHub:
+                        <a href="https://github.com/sziccardi1998"
+                          >https://github.com/sziccardi1998</a
+                        >
                       </li>
-                      <li>LinkdIn: enter url here</li>
-                      <li>GitHub: <a href="https://github.com/sziccardi1998">https://github.com/sziccardi1998</a></li>
                     </ul>
                   </div>
                 </div>
