--- a/portfolio.html
+++ b/portfolio.html
@@ -51,57 +51,67 @@
         <!--Include same type of header used on other pages of the site-->
         <div class="row">
           <div class="col">
-            <h1>Portfolio</h1>
-          </div>
-        </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <h1>
+                      Portfolio
+                    </h1>
+                  </div>
+                </div>
 
-        <!--Use image thumbnails to show portfolio of work-->
-        <div class="row">
-          <div class="col-lg-6">
-            <img
-              src="https://via.placeholder.com/350"
-              alt="Placeholder Image"
-              class="img-thumbnail img-fluid"
-            />
-          </div>
-          <div class="col-lg-6">
-            <img
-              src="https://via.placeholder.com/350"
-              alt="Placeholder Image"
-              class="img-thumbnail img-fluid"
-            />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6">
-            <img
-              src="https://via.placeholder.com/350"
-              alt="Placeholder Image"
-              class="img-thumbnail img-fluid"
-            />
-          </div>
-          <div class="col-lg-6">
-            <img
-              src="https://via.placeholder.com/350"
-              alt="Placeholder Image"
-              class="img-thumbnail img-fluid"
-            />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6">
-            <img
-              src="https://via.placeholder.com/350"
-              alt="Placeholder Image"
-              class="img-thumbnail img-fluid"
-            />
-          </div>
-          <div class="col-lg-6">
-            <img
-              src="https://via.placeholder.com/350"
-              alt="Placeholder Image"
-              class="img-thumbnail img-fluid"
-            />
+                <!--Use image thumbnails to show portfolio of work-->
+                <div class="row">
+                  <div class="col-lg-6">
+                    <img
+                      src="https://via.placeholder.com/250"
+                      alt="Placeholder Image"
+                      class="img-thumbnail img-fluid"
+                    />
+                  </div>
+                  <div class="col-lg-6">
+                    <img
+                      src="https://via.placeholder.com/250"
+                      alt="Placeholder Image"
+                      class="img-thumbnail img-fluid"
+                    />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-6">
+                    <img
+                      src="https://via.placeholder.com/250"
+                      alt="Placeholder Image"
+                      class="img-thumbnail img-fluid"
+                    />
+                  </div>
+                  <div class="col-lg-6">
+                    <img
+                      src="https://via.placeholder.com/250"
+                      alt="Placeholder Image"
+                      class="img-thumbnail img-fluid"
+                    />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-6">
+                    <img
+                      src="https://via.placeholder.com/250"
+                      alt="Placeholder Image"
+                      class="img-thumbnail img-fluid"
+                    />
+                  </div>
+                  <div class="col-lg-6">
+                    <img
+                      src="https://via.placeholder.com/250"
+                      alt="Placeholder Image"
+                      class="img-thumbnail img-fluid"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
