Enabled text wrapping in index.html.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <!--Create container to house remaining content-->
       <div class="container">
         <div class="row">
-          <div class="col col-sm-7">
+          <div class="col col-sm-8">
             <div class="card">
               <div class="card-body">
                 <div class="row">
@@ -61,17 +61,20 @@
                 </div>
                 <div class="row">
                   <div class="col">
+                  
                     <img
                       src="https://via.placeholder.com/100"
                       alt="Place Holder Image"
+                      class="rounded float-left mr-3"
                     />
-                    <p class="text-wrap">
+                    <p >
                       My name is Simon Ziccardi. I am currently located in
                       Columbus, Ohio. I am currently open to contract work as
                       well as permanent positions. In addition to web
                       development work, I have a degree in Chemical Engineering
                       from The Ohio State University.
                     </p>
+                    
                   </div>
                 </div>
                 <div class="row">
