Added footers to each page.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,14 @@
           </div>
         </div>
       </div>
+
     </div>
+
+    <footer class="footer">
+      <div class="container">
+        <span class="text-muted">Copyright</span>
+      </div>
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
