--- a/contact.html
+++ b/contact.html
@@ -105,6 +105,11 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <div class="container">
+        <span class="text-muted">Copyright</span>
+      </div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
