Added headshot to index.html.

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                   <div class="col">
                   
                     <img
-                      src="https://via.placeholder.com/100"
+                      src="images/headshot.jpg"
                       alt="Place Holder Image"
-                      class="rounded float-left mr-3"
+                      class="rounded float-left mr-3 height=150px width=150px"
                     />
                     <p >
                       My name is Simon Ziccardi. I am currently located in
@@ -86,7 +86,8 @@
                   <div class="col">
                     <ul>
                       <li>Email: sziccardifullstack@gmail.com</li>
-                      <li>LinkedIn: enter url here</li>
+                      <li>LinkedIn: <a href="www.linkedin.com/in/simon-ziccardi-671169134">www.linkedin.com/in/simon-ziccardi-671169134
+                      </a></li>
                       <li>
                         GitHub:
                         <a href="https://github.com/sziccardi1998"
