Made headshot a reasonable size.

--- a/index.html
+++ b/index.html
@@ -59,13 +59,16 @@
                     <h1>About Me</h1>
                   </div>
                 </div>
-                <div class="row">
+                <div class="row ">
                   <div class="col">
                   
                     <img
-                      src="images/headshot.jpg"
+                      src="images/headshot-small.jpg"
                       alt="Place Holder Image"
-                      class="rounded float-left mr-3 height=150px width=150px"
+                      class="img img-responsive rounded float-left mr-3"
+                      id="headshot"
+                      height="225px"
+                      width="150px"
                     />
                     <p >
                       My name is Simon Ziccardi. I am currently located in
@@ -77,7 +80,7 @@
                     
                   </div>
                 </div>
-                <div class="row">
+                <div class="row mt-2">
                   <div class="col">
                     <h2>Contact Information</h2>
                   </div>
