Updated styling of html pages.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <!--Create Navbar at the top of the page-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="index.html">Simon Ziccardi</a>
       <button
         class="navbar-toggler"
@@ -71,8 +71,8 @@
                       width="150px"
                     />
                     <p >
-                      My name is Simon Ziccardi. I am currently located in
-                      Columbus, Ohio. I am currently open to contract work as
+                      My name is Simon Ziccardi. I am located in
+                      Columbus, Ohio. I am open to contract work, as
                       well as permanent positions. In addition to web
                       development work, I have a degree in Chemical Engineering
                       from The Ohio State University.
