--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
   <body>
     <!--Create Navbar at the top of the page-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="index.html">Simon Ziccardi</a>
       <button
         class="navbar-toggler"
