--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 
   <body>
     <!--Include Nav bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="index.html">Simon Ziccardi</a>
       <button
         class="navbar-toggler"
@@ -67,30 +67,14 @@
                     <img
                       src="https://via.placeholder.com/250"
                       alt="Placeholder Image"
-                      class="img-thumbnail img-fluid"
+                      class="img-fluid mb-2"
                     />
                   </div>
                   <div class="col-lg-6">
                     <img
                       src="https://via.placeholder.com/250"
                       alt="Placeholder Image"
-                      class="img-thumbnail img-fluid"
-                    />
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-lg-6">
-                    <img
-                      src="https://via.placeholder.com/250"
-                      alt="Placeholder Image"
-                      class="img-thumbnail img-fluid"
-                    />
-                  </div>
-                  <div class="col-lg-6">
-                    <img
-                      src="https://via.placeholder.com/250"
-                      alt="Placeholder Image"
-                      class="img-thumbnail img-fluid"
+                      class="img-fluid mb-2"
                     />
                   </div>
                 </div>
@@ -99,14 +83,30 @@
                     <img
                       src="https://via.placeholder.com/250"
                       alt="Placeholder Image"
-                      class="img-thumbnail img-fluid"
+                      class="img-fluid mb-2"
                     />
                   </div>
                   <div class="col-lg-6">
                     <img
                       src="https://via.placeholder.com/250"
                       alt="Placeholder Image"
-                      class="img-thumbnail img-fluid"
+                      class="img-fluid mb-2"
+                    />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-6">
+                    <img
+                      src="https://via.placeholder.com/250"
+                      alt="Placeholder Image"
+                      class="img-fluid mb-2"
+                    />
+                  </div>
+                  <div class="col-lg-6">
+                    <img
+                      src="https://via.placeholder.com/250"
+                      alt="Placeholder Image"
+                      class="img-fluid mb-2"
                     />
                   </div>
                 </div>
