Cleaned up files.

--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
                     <h1>About Me</h1>
                   </div>
                 </div>
-                <div class="row ">
+                <div class="row">
                   <div class="col">
-                  
                     <img
                       src="images/headshot-small.jpg"
                       alt="Place Holder Image"
@@ -70,14 +69,13 @@
                       height="225px"
                       width="150px"
                     />
-                    <p >
-                      My name is Simon Ziccardi. I am located in
-                      Columbus, Ohio. I am open to contract work, as
-                      well as permanent positions. In addition to web
-                      development work, I have a degree in Chemical Engineering
-                      from The Ohio State University.
+                    <p>
+                      My name is Simon Ziccardi. I am located in Columbus, Ohio.
+                      I am open to contract work, as well as permanent
+                      positions. In addition to web development work, I have a
+                      degree in Chemical Engineering from The Ohio State
+                      University.
                     </p>
-                    
                   </div>
                 </div>
                 <div class="row mt-2">
@@ -89,8 +87,12 @@
                   <div class="col">
                     <ul>
                       <li>Email: sziccardifullstack@gmail.com</li>
-                      <li>LinkedIn: <a href="www.linkedin.com/in/simon-ziccardi-671169134">www.linkedin.com/in/simon-ziccardi-671169134
-                      </a></li>
+                      <li>
+                        LinkedIn:
+                        <a href="www.linkedin.com/in/simon-ziccardi-671169134"
+                          >www.linkedin.com/in/simon-ziccardi-671169134
+                        </a>
+                      </li>
                       <li>
                         GitHub:
                         <a href="https://github.com/sziccardi1998"
@@ -102,44 +104,9 @@
                 </div>
               </div>
             </div>
-            <!--<div class="row">
-              <div class="col">
-                <h1>About Me</h1>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xs-4">
-                <p>
-                  <img
-                    src="https://via.placeholder.com/100"
-                    alt="Placeholder Images"
-                    class="mr-auto"
-                  />
-                  My name is Simon Ziccardi. I am currently located in Columbus,
-                  Ohio. I am currently open to contract work as well as permanent
-                  positions. In addition to web development work, I have a degree
-                  in Chemical Engineering from The Ohio State University.
-                </p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col">
-                <h2>
-                  Contact Information
-                </h2>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col">
-                <ul>
-                  <li>Email: sziccardifullstack@gmail.com</li>
-                </ul>
-              </div>
-            </div> -->
           </div>
         </div>
       </div>
-
     </div>
 
     <footer class="footer">
