--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1 shrink-to-fit=no"
@@ -55,9 +55,7 @@
               <div class="card-body">
                 <div class="row">
                   <div class="col">
-                    <h1>
-                      Portfolio
-                    </h1>
+                    <h1>Portfolio</h1>
                   </div>
                 </div>
 
