--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1 shrink-to-fit=no"
@@ -72,7 +72,7 @@
                           placeholder="Name"
                         />
                       </div>
-        
+
                       <div class="form-group">
                         <label for="InputEmail">Email</label>
                         <input
@@ -83,7 +83,7 @@
                           placeholder="Email"
                         />
                       </div>
-        
+
                       <div class="form-group">
                         <label for="InputMessage">Message</label>
                         <textarea
@@ -95,7 +95,9 @@
                           rows="3"
                         ></textarea>
                       </div>
-                      <button type="submit" class="btn btn-primary">Submit</button>
+                      <button type="submit" class="btn btn-primary">
+                        Submit
+                      </button>
                     </form>
                   </div>
                 </div>
