Included screenshots of portfolio pages.

--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
     </div>
     <footer class="footer">
       <div class="container">
-        <span class="text-muted">Copyright</span>
+        <span>Copyright</span>
       </div>
     </footer>
     <script
