--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
     </div>
     <footer class="footer">
       <div class="container">
-        <span class="text-muted">Copyright</span>
+        <span>Copyright</span>
       </div>
     </footer>
     <script
