--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <footer class="footer">
       <div class="container">
-        <span class="text-muted">Copyright</span>
+        <span>Copyright</span>
       </div>
     </footer>
 
