--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1 shrink-to-fit=no"
@@ -62,7 +62,7 @@
                 <div class="row">
                   <div class="col">
                     <img
-                      src="images/headshot-small.jpg"
+                      src="./assets/images/headshot-small.jpg"
                       alt="Place Holder Image"
                       class="img img-responsive rounded float-left mr-3"
                       id="headshot"
