Addition of resume to contact page.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                       width="150px"
                     />
                     <p>
-                      My name is Simon Ziccardi. I am located in Columbus, Ohio.
+                      My name is Simon Ziccardi, I am a fullstack web developer currently located in Columbus, Ohio.
                       I am open to contract work, as well as permanent
                       positions. In addition to web development work, I have a
                       degree in Chemical Engineering from The Ohio State
@@ -87,17 +87,21 @@
                   <div class="col">
                     <ul>
                       <li>Email: sziccardifullstack@gmail.com</li>
+                      <li>Phone: 614-551-5980</li>
                       <li>
                         LinkedIn:
-                        <a href="www.linkedin.com/in/simon-ziccardi-671169134"
+                        <a href="www.linkedin.com/in/simon-ziccardi-671169134" rel="Link to LinkedIn Page"
                           >www.linkedin.com/in/simon-ziccardi-671169134
                         </a>
                       </li>
                       <li>
                         GitHub:
-                        <a href="https://github.com/sziccardi1998"
+                        <a href="https://github.com/sziccardi1998" rel="Link to GitHub Page"
                           >https://github.com/sziccardi1998</a
                         >
+                      </li>
+                      <li>
+                        <a download="./Ziccardi_Simon_Resume2020_2.pdf" href="" rel="Downloadable Resume">Resume</a>
                       </li>
                     </ul>
                   </div>
