--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         >
                       </li>
                       <li>
-                        <a download="./Ziccardi_Simon_Resume2020_2.pdf" href="" rel="Downloadable Resume">Resume</a>
+                        <a href="./assets/Ziccardi_Simon_Resume2020_2.pdf" rel="Downloadable Resume" download>Resume</a>
                       </li>
                     </ul>
                   </div>
