Addition of other projects to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
                           <img src="./assets/images/COVIDTracker.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%;">
                         </div>
                         <div class="col-md-8">
-                          <div class="card-body">
+                          <div class="card-body content">
                             <h5 class="card-title">COVID Tracker</h5>
                             <p class="card-text">Group project that created a mobile responsive web application that allows users to search countries to see how they are dealing with and have been affected by COVID-19.</p>
                             <p><a href="https://sziccardi1998.github.io/COVIDTracker/" target="_blank">Deployed Application</a></p><!--Link to the deployed version of the application-->
@@ -87,7 +87,7 @@
                           <img src="./assets/images/DayPlanner.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%;">
                         </div>
                         <div class="col-md-8">
-                          <div class="card-body">
+                          <div class="card-body content">
                             <h5 class="card-title">Day Planner</h5>
                             <p class="card-text">Web application that uses local storage to allow users to save daily tasks.</p>
                             <p><a href="https://sziccardi1998.github.io/DayPlanner/" target="_blank">Deployed Application</a></p><!--Link to the deployed version of the application-->
@@ -103,14 +103,14 @@
                     <div class="card mb-8">
                       <div class="row no-gutters">
                         <div class="col-md-4">
-                          <img src="./assets/images/COVIDTracker.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%;">
+                          <img src="./assets/images/PasswordGenerator.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%">
                         </div>
                         <div class="col-md-8">
-                          <div class="card-body">
-                            <h5 class="card-title">COVID Tracker</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <p><a href="https://sziccardi1998.github.io/COVIDTracker/" target="_blank">Deployed Application</a></p><!--Link to the deployed version of the application-->
-                            <p><a href="https://github.com/sziccardi1998/COVIDTracker" target="_blank">GitHub Repository</a></p><!--Link to the application repository-->
+                          <div class="card-body content">
+                            <h5 class="card-title">Password Generator</h5>
+                            <p class="card-text">Web application that takes user inputs to generate a random password meeting user specifications.</p>
+                            <p><a href="https://sziccardi1998.github.io/PasswordGenerator/" target="_blank">Deployed Application</a></p><!--Link to the deployed version of the application-->
+                            <p><a href="https://github.com/sziccardi1998/PasswordGenerator" target="_blank">GitHub Repository</a></p><!--Link to the application repository-->
                           </div>
                         </div>
                       </div>
@@ -122,14 +122,14 @@
                     <div class="card mb-8">
                       <div class="row no-gutters">
                         <div class="col-md-4">
-                          <img src="./assets/images/COVIDTracker.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%;">
+                          <img src="./assets/images/WeatherDashboard.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%;">
                         </div>
                         <div class="col-md-8">
-                          <div class="card-body">
-                            <h5 class="card-title">COVID Tracker</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <p><a href="https://sziccardi1998.github.io/COVIDTracker/" target="_blank">Deployed Application</a></p><!--Link to the deployed version of the application-->
-                            <p><a href="https://github.com/sziccardi1998/COVIDTracker" target="_blank">GitHub Repository</a></p><!--Link to the application repository-->
+                          <div class="card-body content">
+                            <h5 class="card-title">Weather Dashboard</h5>
+                            <p class="card-text">Web application that uses OpenWeather API to let users search for the weather in a city. Uses local stroage to display the users last searched city on page load.</p>
+                            <p><a href="https://sziccardi1998.github.io/WeatherDashboard/" target="_blank">Deployed Application</a></p><!--Link to the deployed version of the application-->
+                            <p><a href="https://github.com/sziccardi1998/WeatherDashboard" target="_blank">GitHub Repository</a></p><!--Link to the application repository-->
                           </div>
                         </div>
                       </div>
