Fixed issue with background sizing.

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
       </div>
     </nav>
 
-    <div class="bg">
+    <div class="bg port">
       <div class="container">
         <!--Include same type of header used on other pages of the site-->
         <div class="row">
