additional resume link added.

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                       width="150px"
                     />
                     <p>
-                      My name is Simon Ziccardi, I am a fullstack web developer currently located in Columbus, Ohio.
-                      I am open to contract work, as well as permanent
-                      positions. In addition to web development work, I have a
-                      degree in Chemical Engineering from The Ohio State
-                      University.
+                      My name is Simon Ziccardi, I am a fullstack web developer
+                      currently located in Columbus, Ohio. I am open to contract
+                      work, as well as permanent positions. In addition to web
+                      development work, I have a degree in Chemical Engineering
+                      from The Ohio State University.
                     </p>
                   </div>
                 </div>
@@ -90,18 +90,34 @@
                       <li>Phone: 614-551-5980</li>
                       <li>
                         LinkedIn:
-                        <a href="www.linkedin.com/in/simon-ziccardi-671169134" rel="Link to LinkedIn Page"
+                        <a
+                          href="www.linkedin.com/in/simon-ziccardi-671169134"
+                          rel="Link to LinkedIn Page"
                           >www.linkedin.com/in/simon-ziccardi-671169134
                         </a>
                       </li>
                       <li>
                         GitHub:
-                        <a href="https://github.com/sziccardi1998" rel="Link to GitHub Page"
+                        <a
+                          href="https://github.com/sziccardi1998"
+                          rel="Link to GitHub Page"
                           >https://github.com/sziccardi1998</a
                         >
                       </li>
                       <li>
-                        <a href="./assets/Ziccardi_Simon_Resume2020_WD.docx" rel="Downloadable Resume" download>Resume</a>
+                        <a
+                          href="./assets/Ziccardi_Simon_Resume2020_WD.docx"
+                          rel="Downloadable Resume"
+                          download
+                          >Web Development Resume</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          href="./assets/Ziccardi_Simon_Resume2020_2.pdf"
+                          download
+                          >Engineering Resume</a
+                        >
                       </li>
                     </ul>
                   </div>
