Changes to about me and new photo.

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                       width="150px"
                     />
                     <p>
-                      My name is Simon Ziccardi, I am a fullstack web developer
-                      currently located in Columbus, Ohio. I am open to contract
+                      I am a fullstack web developer
+                     located in Columbus, OH. I am seeking contract
                       work, as well as permanent positions. In addition to web
-                      development work, I have a degree in Chemical Engineering
+                      development work, I graduate cum laude with a degree in Chemical Engineering
                       from The Ohio State University.
                     </p>
                   </div>
